--- a/css/all.scss
+++ b/css/all.scss
@@ -5,6 +5,7 @@
 // === 外掛 ===
 @import "swipeslider"; // 輪播
 @import "marquee";     // 跑馬燈
+@import "rolldate"; //仿ios日期
 
 // === 彈跳視窗 ===
 @import "dialog";
