--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -635,25 +635,44 @@
 
     //意見反饋
     .suggest {
-        p {
-            padding-bottom: 8px;
-            font-size: 1.1rem;
-            font-weight: bold;
-            color: #869bae;
+        .innerBox {
+            width: 100%;
+            max-width: unset;
         }
-        .textBox {
-            height: 200px;
-            box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
+        .suggestMsg {
+            width: 100%;
+            padding: 0 15px 15px;
+            margin: 10px 0 25px;
+            background-color: #444;
+            border-radius: 5px;
+            box-shadow: 1px 1px 4px #000;
+            display: flex;
+            flex-direction: column;
+            p {
+                padding: 10px 0;
+                color: #7f8188;
+                font-weight: bold;
+                -ms-flex-negative: 0;
+                flex-shrink: 0;
+                font-size: 0.95rem;
+            }
         }
+
         textarea {
             width: 100%;
-            height: 100%;
-            @include fullNone;
+            height: 200px;
+            background: transparent;
+            outline: none;
+            border: none;
             padding: 10px;
             color: #fff;
             font-size: 1rem;
             line-height: 22px;
             resize: none;
+            border-radius: 5 px;
+            background-color: #2c2d2f;
+            -webkit-box-shadow: 0 2px 4px #000 inset;
+            box-shadow: 0 2px 4px #000 inset;
         }
         .iptBox {
             max-width: 100%;
@@ -663,19 +682,31 @@
         .iptBox + .iptBox {
             margin-top: 10px;
         }
-
+        .suggestSel {
+            width: 100%;
+            height: 45px;
+            padding: 0 10px;
+            border-radius: 5px;
+            box-shadow: -1px 1px 2px #a0a0a0 inset;
+            background: linear-gradient(0deg, #2f2f2f, #4f4f4f);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            box-shadow: 1px 1px 4px #000;
+        }
         select {
             width: 100%;
             height: 100%;
             padding-left: 20px;
             @include fullNone;
             color: #fff;
-            font-size: 1rem;
+            font-size: 1.1rem;
             letter-spacing: 1px;
             cursor: pointer;
             appearance: none;
             background: url(../images/icon/arrow-bottom.png) no-repeat right center transparent;
         }
+
         option {
             height: 32px;
             line-height: 32px;
@@ -683,21 +714,17 @@
         }
 
         .innerBox {
-            form{
-                & > div {
-                    width: 100%;
-                    height: auto;
-                    margin-bottom: 20px;
-                    align-items: unset;
-                    flex-direction: column;
-                }
-            }   
+            form {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
         }
         .btn {
-            width: 100%;
-            height: 45px !important;
+            width: 300px !important;
+            height: 40px;
             line-height: 45px;
-            margin-top: 40px;
+            flex-shrink: 0;
         }
     }
 }
