--- a/css/_member.scss
+++ b/css/_member.scss
@@ -42,6 +42,16 @@
         padding-bottom: 50px;
         margin: auto;
         font-size: 1.2rem;
+       
+        .mbrl_ipt{
+            position: relative;
+            .errorTxt{
+                position: absolute;
+                @include pos(bl,-35px,0)
+            }
+        }
+
+
         ul{
             display: flex;
             flex-direction: column;
@@ -98,8 +108,6 @@
                 @include fullNone;
                 font-size: 1.2rem;
                 &:disabled{
-                    box-shadow: 2px 2px 4px #999 inset;
-                    background-color: #ddd;
                     color: #9e9d9d;
                 }
             }
@@ -142,14 +150,16 @@
             input{
                width: 20px;
                height: 20px;
+               margin-right: 5px;
                position: relative;
+               transform: translateY(3px);
                &::before{
                    content: '';
                    width: 100%;
                    height: 100%;
                    background: url(../images/icon/radio_off.png)no-repeat center/cover;
                    position: absolute;
-                   @include pos(tbrl,0);
+                   @include pos(tl,0);
                }
                &:checked::before{
                    background-image: url(../images/icon/radio_on.png);
