--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #0b2d53;
+    background-color: #0D2D58;
     position: relative;
 }
 
@@ -33,6 +33,7 @@ input:-webkit-autofill:focus {
     margin: auto;
     min-height: 188px;
     background-color: $mainBgc;
+    background: url(../images/hdbg.jpg) no-repeat center top / 1920px auto;
     position: relative;
     input:-webkit-autofill,
     input:-webkit-autofill:hover,
@@ -49,6 +50,7 @@ input:-webkit-autofill:focus {
             -webkit-text-fill-color: #d7e4f9;
         }
     }
+
     // hd_top start
     .hd_top {
         max-width: $count-minW;
@@ -61,7 +63,8 @@ input:-webkit-autofill:focus {
         @include rwd(1280) {
             width: 100%;
             padding: 5px 10px;
-            background: linear-gradient(180deg, #234c77, #0b2139);
+            // background: linear-gradient(180deg, #234c77, #0b2139);
+            background: url(../images/hdbg.jpg) no-repeat center top / 1920px auto;
             position: fixed;
             top: 0;
             left: 0;
@@ -615,6 +618,7 @@ input:-webkit-autofill:focus {
     // hd_menu start
     .hd_menu {
         width: 100%;
+        max-width: 1920px;
         margin: auto;
         height: 48px;
         background: linear-gradient(90deg, transparent 10%, #000, transparent 90%);
@@ -957,32 +961,22 @@ input:-webkit-autofill:focus {
         content: "";
         width: 100%;
         height: 100%;
-        background: url(../images/bodyBg.jpg) no-repeat center bottom;
+        background: url(../images/bodyBg2.jpg) no-repeat center 18vw / 1920px auto;
         position: absolute;
         bottom: 0;
         left: 0;
         z-index: -1;
-        opacity: 0.5;
+        opacity: 0.6;
+        @media screen and (min-width: 1920px) {
+            background-position: center 348px;
+        }
+
+        @include rwd(860){
+            background-position: center 36vw;
+        }
     }
-    // &::after{
-    //     content: '';
-    //     width: 100%;
-    //     height: 19.5%;
-    //     background: url(../images/rain.png);
-    //     position: absolute;
-    //     bottom: 0;
-    //     left: 0;
-    //     animation: rain 2s linear infinite;
-    //     opacity: 0.4;
-    //     border-radius: 17% 17% 0 0;
-    //     z-index: -1;
-    // }
 }
 
-// @keyframes rain{
-//     0%{background-position: 0 0;}
-//     100%{background-position: 500px 1000px;}
-// }
 .contBox-min {
     width: 100%;
     max-width: $count-minW;
