--- a/css/all.css
+++ b/css/all.css
@@ -1707,7 +1707,7 @@ img {
 }
 
 body {
-  background-color: #0b2d53;
+  background-color: #0D2D58;
   position: relative;
 }
 
@@ -2000,6 +2000,7 @@ input:-webkit-autofill:focus {
   margin: auto;
   min-height: 188px;
   background-color: #0b2139;
+  background: url(../images/hdbg.jpg) no-repeat center top/1920px auto;
   position: relative;
 }
 
@@ -2044,8 +2045,7 @@ input:-webkit-autofill:focus {
   .header .hd_top {
     width: 100%;
     padding: 5px 10px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#234c77), to(#0b2139));
-    background: linear-gradient(180deg, #234c77, #0b2139);
+    background: url(../images/hdbg.jpg) no-repeat center top/1920px auto;
     position: fixed;
     top: 0;
     left: 0;
@@ -2968,6 +2968,7 @@ input:-webkit-autofill:focus {
 
 .header .hd_menu {
   width: 100%;
+  max-width: 1920px;
   margin: auto;
   height: 48px;
   background: -webkit-gradient(linear, left top, right top, color-stop(10%, transparent), color-stop(#000), color-stop(90%, transparent));
@@ -3458,12 +3459,24 @@ input:-webkit-autofill:focus {
   content: "";
   width: 100%;
   height: 100%;
-  background: url(../images/bodyBg.jpg) no-repeat center bottom;
+  background: url(../images/bodyBg2.jpg) no-repeat center 18vw/1920px auto;
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: -1;
-  opacity: 0.5;
+  opacity: 0.6;
+}
+
+@media screen and (min-width: 1920px) {
+  .mainCnt::before {
+    background-position: center 348px;
+  }
+}
+
+@media screen and (max-width: 860px) {
+  .mainCnt::before {
+    background-position: center 36vw;
+  }
 }
 
 .contBox-min {
